@@ -25,7 +25,7 @@
 	<script src="../../resources/mediawiki/mediawiki.user.js"></script>
 
 	<script src="../../resources/jquery/jquery.messageBox.js"></script>
-	<script src="../../resources/jquery/jquery.mwPrototypes.js"></script>
+	<script src="../../resources/jquery/jquery.mwExtension.js"></script>
 	<script src="../../resources/mediawiki/mediawiki.util.js"></script>
 
 	<script src="../../resources/jquery/jquery.checkboxShiftClick.js"></script>
@@ -63,7 +63,7 @@
 	<script src="suites/resources/mediawiki/mediawiki.user.js"></script>
 
 	<script src="suites/resources/jquery/jquery.client.js"></script>
-	<script src="suites/resources/jquery/jquery.mwPrototypes.js"></script>
+	<script src="suites/resources/jquery/jquery.mwExtension.js"></script>
 	<script src="suites/resources/mediawiki/mediawiki.util.js"></script>
 
 	<script src="suites/resources/jquery/jquery.autoEllipsis.js"></script>
